--- a/roles/app/defaults/main.yml
+++ b/roles/app/defaults/main.yml
@@ -20,3 +20,7 @@ gunicorn_user: "{{ application_name }}"
 gunicorn_group: webapps
 gunicorn_num_workers: 3
 gunicorn_max_requests: 0
+
+# Nginx settings.
+nginx_access_log_file: "{{ application_log_dir }}/nginx_access.log"
+nginx_error_log_file: "{{ application_log_dir }}/nginx_error.log"
