--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -20,7 +20,9 @@
       - "{{ base_python_package }}-pip"
       - "i{{ base_python_package }}"
       - supervisor
-      - libcurl4-nss-dev      
+      - libcurl4-nss-dev
+      - nmap
+      - tmux
 
   tags:
     - packages
