--- a/roles/app-base/tasks/main.yml
+++ b/roles/app-base/tasks/main.yml
@@ -8,8 +8,5 @@
 - include: setup_git_repo.yml
   tags: deploy
 
-- include: setup_flask_app.yml
+- include: install_reqs.yml
   tags: deploy
-
-- include: setup_supervisor.yml
-  tags: supervisor
