--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,5 @@
 [defaults]
 host_key_checking=false
+
 [ssh_connection]
-ssh_extra_args=-o ForwardAgent=yes
+ssh_args = -o ForwardAgent=yes -o ControlMaster=auto -o ControlPersist=60s
