--- a/roles/nginx/defaults/main.yml
+++ b/roles/nginx/defaults/main.yml
@@ -2,7 +2,7 @@
 
 nginx_server_name: "{{ inventory_hostname }}"
 nginx_ssl_dest_dir: /etc/ssl
-nginx_strong_dh_group: true  # Strongly recomended in production. See weakdh.org.
+nginx_strong_dh_group: false  # Strongly recomended in production. See weakdh.org.
 nginx_use_letsencrypt: false
 
 # Only used when nginx_use_letsencrypt is set to yes/true. The 'certbot' role will automatically generate these files.
