--- a/worker.yml
+++ b/worker.yml
@@ -3,6 +3,8 @@
   become: true
   vars:
     update_apt_cache: true
+    broker_ip: 192.168.33.10
+
   vars_files:
     - env_vars/base.yml
     - roles/base/defaults/main.yml
