--- a/roles/celery/vars/main.yml
+++ b/roles/celery/vars/main.yml
@@ -14,5 +14,5 @@ celery_application_name: celery
 celery_scripts_dir: "{{ virtualenv_path }}/scripts/celery"
 celery_template_file: "{{ celery_application_name }}_start.j2"
 
-celery_log_dir: "{{ virtualenv_path }}/logs"
-celery_log_file: "{{ celery_log_dir }}/{{ celery_application_name }}.log"
+celery_log_dir: "{{ persistent_dir }}/logs"
+celery_log_file: "{{ celery_log_dir }}/{{ celery_application_name }}-{{ ansible_hostname }}.log"
