--- a/env_vars/aws.yml
+++ b/env_vars/aws.yml
@@ -3,9 +3,11 @@
 ec2_region: "eu-west-1"
 master_instance_type: "t2.micro"
 worker_instance_type: "t2.micro"
+# master_instance_type: "t2.medium"
+# worker_instance_type: "m5.4xlarge"
 ami_image: "ami-08d658f84a6d84a80"
-worker_spot_price: 0.10
-spot_wait_timeout: 600
+worker_spot_price: "0.5"
+spot_wait_timeout: "600"
 
 num_workers: 1
 
