--- a/env_vars/base.yml
+++ b/env_vars/base.yml
@@ -27,6 +27,7 @@ rabbitmq_admin_user: admin
 rabbitmq_admin_password: "{{ rmq_password }}"
 broker_url: "amqp://{{ rabbitmq_application_user }}:{{ rabbitmq_application_password }}@{{ broker_ip }}:5672"
 broker_api: "http://{{ rabbitmq_admin_user }}:{{ rabbitmq_application_password }}@{{ broker_ip }}:15672/api/"
+notify_url: "https://lambdacoin.org/notify/block_created"
 
 # Nginx settings.
 robots_txt: |
