--- a/env_vars/base.yml
+++ b/env_vars/base.yml
@@ -28,6 +28,8 @@ rabbitmq_admin_user: admin
 rabbitmq_admin_password: "{{ rmq_password }}"
 broker_url: "amqp://{{ rabbitmq_application_user }}:{{ rabbitmq_application_password }}@{{ broker_ip }}:5672"
 broker_api: "http://{{ rabbitmq_admin_user }}:{{ rabbitmq_application_password }}@{{ broker_ip }}:15672/api/"
+
+balances_url: "https://lambdacoin.org/lambda/getbalances"
 notify_url: "https://lambdacoin.org/notify/block_created"
 timer_url: "https://lambdacoin.org/notify/block_timer"
 
