--- a/roles/app-base/tasks/setup_git_repo.yml
+++ b/roles/app-base/tasks/setup_git_repo.yml
@@ -8,14 +8,14 @@
 #
 # https://stackoverflow.com/questions/24124140/ssh-agent-forwarding-with-ansible
 
-- name: Add ssh agent line to sudoers
-  lineinfile:
-    dest: /etc/sudoers
-    state: present
-    regexp: SSH_AUTH_SOCK
-    line: Defaults env_keep += "SSH_AUTH_SOCK"
-  when: ssh_forward_agent is defined and ssh_forward_agent
-  tags: git
+#- name: Add ssh agent line to sudoers
+#  lineinfile:
+#    dest: /etc/sudoers
+#    state: present
+#    regexp: SSH_AUTH_SOCK
+#    line: Defaults env_keep += "SSH_AUTH_SOCK"
+#  when: ssh_forward_agent is defined and ssh_forward_agent
+#  tags: git
 
 # The git module calls python's tempfile.mkstemp() which uses the TMPDIR
 # environment variable. However this is set to /tmp which is mounted as
